--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,26 @@
 aniso8601==7.0.0
+astroid==2.4.2
 Django==2.2.13
+django-autoslug==1.9.7
+django-environ==0.4.5
 graphene==2.1.8
 graphene-django==2.10.1
 graphql-core==2.3.2
 graphql-relay==2.0.1
+isort==4.3.21
+lazy-object-proxy==1.4.3
+mccabe==0.6.1
+mysqlclient==1.4.6
+Pillow==7.1.2
 promise==2.3
+pylint==2.5.3
+python-dateutil==2.8.1
 pytz==2020.1
+rope==0.17.0
 Rx==1.6.1
 singledispatch==3.4.0.3
 six==1.15.0
 sqlparse==0.3.1
+toml==0.10.1
+typed-ast==1.4.1
+wrapt==1.12.1
