add env template

--- a/.envTEMPLATE
+++ b/.envTEMPLATE
@@ -1,9 +1,15 @@
+MYSQL_ROOT_PASSWORD=
+MYSQL_DATABASE=
+MYSQL_USER=
+MYSQL_PASSWORD=
 
-DB_USER=user
-DB_PASSWORD=asdf
-SECRET_KEY=nb1+6h864#=b1c8a5*hacg0kv#_zxaixt449!32n2n+r1+9qtk
+DB_PORT=6667
+
+DB_USER=root
+DB_PASSWORD=
+SECRET_KEY=
 DEBUG=True
-ALLOWED_HOST='localhost'
+ALLOWED_HOST=
 CSRF_COOKIE_SECURE=False
 SESSION_COOKIE_SECURE=False
 STATIC_ROOT=
