configure db correctly

--- a/.envTEMPLATE
+++ b/.envTEMPLATE
@@ -3,10 +3,8 @@ MYSQL_DATABASE=
 MYSQL_USER=
 MYSQL_PASSWORD=
 
+DB_HOST=127.0.0.1
 DB_PORT=6667
-
-DB_USER=root
-DB_PASSWORD=
 SECRET_KEY=
 DEBUG=True
 ALLOWED_HOST=
