--- a/TEMPLATE_MYSQL.env
+++ b/TEMPLATE_MYSQL.env
@@ -1,3 +1,5 @@
+DATABASE_ENGINE=django.db.backends.mysql
+
 MYSQL_ROOT_PASSWORD=
 MYSQL_DATABASE=
 MYSQL_USER=
@@ -7,7 +9,7 @@ DB_HOST=127.0.0.1
 DB_PORT=6667
 SECRET_KEY=
 DEBUG=True
-ALLOWED_HOST=
+ALLOWED_HOST=*
 CSRF_COOKIE_SECURE=False
 SESSION_COOKIE_SECURE=False
 STATIC_ROOT=
