--- a/requirements-wsl.txt
+++ b/requirements-wsl.txt
@@ -10,6 +10,8 @@ graphql-relay==2.0.1
 isort==4.3.21
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
+mod-wsgi==4.7.1
+mod-wsgi-httpd==2.4.46.1
 Pillow==7.1.2
 promise==2.3
 pylint==2.5.3
